added phone number

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-xl-3">
-                    <span><i class="biz bi-geo-alt-fill"> :- </i>Near kuber hotel,Nagar-Manmad Highway,Rahuri</span>
+                    <span><i class="biz bi-geo-alt-fill">:- </i>Near kuber hotel,Nagar-Manmad Highway,Rahuri</span>
                 </div>
 
                 <div class="col-md-6 col-xl-3 mt-2 ">
-                    <span class=""><i class="biz bi-phone-fill"> :- </i> + 918380830752</span>
+                    <span class=""><i class="biz bi-phone-fill"> :- </i> +91 8380830752 / 9130362410</span>
                 </div>
 
                 <div class="col-md-6 col-xl-3 mt-2 ">
-                    <span class=""><i class="biz bi-envelope-fill"> :- </i>info@info.com</span>
+                    <span class=""><i class="biz bi-envelope-fill">:-</i><a> nirmiticonstruction2019@gmail.com </a></span>
                 </div>
 
                 <div class="col-md-6 col-xl-3 mt-2 ">
@@ -459,7 +459,7 @@
                     <ul>
                         <li>Phone :- +91 83808 30752</li>
                         <li>Address :- Near kuber hotel,Nagar-Manmad Highway, Rahuri </li>
-                        <li>Email :-info@info.com</li>
+                        <li>Email :-nirmiticonstruction2019@gmail.com</li>
                     </ul>
                 </div>
 
