--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 </div>
 
                 <div class="service col-md-6 col-xl-3 mt-3">
-                    <h4>OUR SERVICE</h4>
+                    <h4>OUR SERVICEs</h4>
                     <ul>
                         <li> <a class="text-decoration-none" href="#">Conceptual design</a></li>
                         <li> <a class="text-decoration-none" href="#">House repair</a></li>
