--- a/Nirmiti Contraction/Nirmiti Contraction/index.html
+++ b/Nirmiti Contraction/Nirmiti Contraction/index.html
@@ -75,7 +75,7 @@
                             <a class=" button nav-link text-white me-3" href="#Home">Home</a>
                         </li>
                         <li>
-                            <a class="  button nav-link text-white  me-3" href="#About">About</a>
+                            <a class="  button nav-link text-white  me-3" href="#About">About us</a>
                         </li>
                         <li>
                             <a class="  button nav-link text-white me-3" href="#Information">Information</a>
